--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link
       rel="stylesheet"
       media="screen and (max-width: 1170px)"
-      href="/css/phone.css"
-    />
-  </head>
+      href="/css/phone.css"/>
+  </head>  
+  
   <body>
     <nav id="navbar">
       <div id="logo">
